# rust-web

./: .gitignore  Cargo.toml  README.md  app_config.toml
src/: main.rs
src/api/: auth.rs  mod.rs  user.rs
src/common/: mod.rs
src/common/error/: mod.rs  resp_err.rs
src/common/response/: mod.rs
src/config/: app_config.rs  log.rs
src/middleware/: auth.rs  jwt.rs  mod.rs
src/models/: mod.rs  user.rs
src/utils/: mod.rs
