[package]
edition = "2021"
name = "poem-web"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# poem
poem = "1.0"
serde = {version = "1", features = ["derive"]}
tokio = {version = "1.12", features = ["rt-multi-thread", "macros"]}
# openapi
poem-openapi = {version = "1.0.44", features = ["swagger-ui"]}

# config
config = "0.11"

# rbatis
rbson = "2.0"
fast_log = {version = "1.3", features = ["lz4", "zip", "gzip"]}
log = "0.4"
rbatis = {version = "3.0"}

# lazy_static
lazy_static = "1.4"

# jwt
jsonwebtoken = "7"

# chrono 
chrono = {version = "0.4", features = ["serde"]}


async-std = "1.10"
